--- a/nodeserver/src/client/css/Repository/RepositoryLogView.css
+++ b/nodeserver/src/client/css/Repository/RepositoryLogView.css
@@ -11,22 +11,11 @@
     .repositoryLogView .commits:focus {
       outline: none; }
     .repositoryLogView .commits .commit {
+      position: absolute;
       width: 8px;
       height: 8px;
       background-color: black;
-      vertical-align: middle;
-      text-align: center;
-      font-family: Helvetica, Arial;
-      pointer-events: all;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      position: absolute;
-      cursor: pointer;
-      box-sizing: border-box;
       border-radius: 5px; }
-      .repositoryLogView .commits .commit.merge {
-        border-radius: 0 !important; }
       .repositoryLogView .commits .commit.actual {
         background-color: #ff7800;
         -moz-box-shadow: 0 0 10px 3px #ff7800;
@@ -39,7 +28,8 @@
     border-bottom: 1px solid #3a87ad;
     border-top: 1px solid #3a87ad;
     text-align: center;
-    margin-top: 15px; }
+    margin-top: 15px;
+    position: relative; }
     .repositoryLogView .show-more a:hover {
       text-decoration: none; }
   .repositoryLogView table tr {
