--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -1,89 +1,64 @@
 /* override default connector properties for draggable connector end */
-.designer-canvas .designer-canvas-header {
-  padding: 5px;
-  height: 30px;
-  background-color: #efefef;
-  overflow: hidden;
-  white-space: nowrap; }
-  .designer-canvas .designer-canvas-header .designer-canvas-header-title {
-    font-size: 20px;
-    font-weight: bold;
-    display: inline-block;
-    margin-right: 10px;
-    margin-left: 10px; }
-  .designer-canvas .designer-canvas-header .designer-canvas-read-only-mode {
-    font-size: 18px;
-    font-weight: bold;
-    display: inline-block;
-    margin-right: 10px;
-    margin-left: 10px; }
-  .designer-canvas .designer-canvas-header .btn-group {
-    margin-left: 10px; }
-  .designer-canvas .designer-canvas-header .btn-group.no-margin {
-    margin-left: 0px; }
-.designer-canvas .designer-canvas-body {
-  position: relative;
-  overflow: auto; }
-  .designer-canvas .designer-canvas-body.read-only {
-    background-color: #ededed; }
-  .designer-canvas .designer-canvas-body .items {
-    position: absolute; }
-    .designer-canvas .designer-canvas-body .items:focus {
-      outline: none; }
-    .designer-canvas .designer-canvas-body .items .rubberband {
-      background: rgba(219, 234, 252, 0.49);
-      border: #52a8ec solid 1px;
-      z-index: 100000; }
-    .designer-canvas .designer-canvas-body .items .selection-outline {
-      background: rgba(255, 255, 0, 0.1);
-      border: black dashed 1px;
+.designer-canvas .items {
+  position: absolute; }
+  .designer-canvas .items:focus {
+    outline: none; }
+  .designer-canvas .items .rubberband {
+    background: rgba(219, 234, 252, 0.49);
+    border: #52a8ec solid 1px;
+    z-index: 100000; }
+  .designer-canvas .items .selection-outline {
+    background: rgba(255, 255, 0, 0.1);
+    border: black dashed 1px;
+    position: absolute;
+    /*z-index: 1002;*/
+    pointer-events: none;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6); }
+    .designer-canvas .items .selection-outline .s-btn {
       position: absolute;
-      /*z-index: 1002;*/
-      pointer-events: none;
+      /*z-index: 100000;*/
+      /*width: 26px;
+      height: 26px;*/
+      background-color: white;
+      border: 2px solid #000000;
+      line-height: 14px;
+      padding: 3px;
+      border-radius: 12px;
+      pointer-events: all;
+      cursor: pointer;
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6); }
-      .designer-canvas .designer-canvas-body .items .selection-outline .s-btn {
-        position: absolute;
-        /*z-index: 100000;*/
-        width: 26px;
-        height: 26px;
-        background-color: white;
-        border-radius: 13px;
-        pointer-events: all;
-        cursor: pointer;
-        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
-        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6); }
-        .designer-canvas .designer-canvas-body .items .selection-outline .s-btn.delete {
-          top: -13px;
-          right: -13px;
-          background-image: url(../../img/remove.png); }
-    .designer-canvas .designer-canvas-body .items .connectionDraggableEnd {
-      box-sizing: border-box;
-      background-color: #fefefe;
-      height: 12px;
-      width: 12px;
-      position: absolute;
-      cursor: pointer;
-      border: 1px solid #883333;
-      margin-top: -6px;
-      margin-left: -6px; }
-      .designer-canvas .designer-canvas-body .items .connectionDraggableEnd:hover {
-        border-color: rgba(255, 43, 43, 0.8);
-        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
-        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6); }
-      .designer-canvas .designer-canvas-body .items .connectionDraggableEnd.connection-end-state-hover {
-        background-color: lime; }
-  .designer-canvas .designer-canvas-body .dropRegion {
-    width: 0;
-    height: 0;
+      .designer-canvas .items .selection-outline .s-btn.delete {
+        top: -13px;
+        right: -13px; }
+  .designer-canvas .items .connectionDraggableEnd {
+    box-sizing: border-box;
+    background-color: #fefefe;
+    height: 12px;
+    width: 12px;
     position: absolute;
-    top: 0;
-    left: 0; }
-    .designer-canvas .designer-canvas-body .dropRegion.accept-droppable {
-      background-color: rgba(0, 255, 0, 0.05); }
+    cursor: pointer;
+    border: 1px solid #883333;
+    margin-top: -6px;
+    margin-left: -6px; }
+    .designer-canvas .items .connectionDraggableEnd:hover {
+      border-color: rgba(255, 43, 43, 0.8);
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
+      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6); }
+    .designer-canvas .items .connectionDraggableEnd.connection-end-state-hover {
+      background-color: lime; }
+.designer-canvas .dropRegion {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0; }
+  .designer-canvas .dropRegion.accept-droppable {
+    background-color: rgba(0, 255, 0, 0.05); }
 
 .designer-canvas-property-dialog.ui-dialog .ui-dialog-content {
   position: relative;
