--- a/nodeserver/src/client/css/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.css
+++ b/nodeserver/src/client/css/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.css
@@ -4,8 +4,7 @@
   border: 2px solid black;
   background-color: #c5f1ff;
   padding: 3px;
-  text-align: center;
-  /*position: absolute;*/ }
+  text-align: center; }
   .decorator-with-ports .name {
     white-space: nowrap;
     font-size: 9px;
@@ -27,9 +26,6 @@
       vertical-align: top;
       width: 50px;
       min-height: 1px; }
-      .decorator-with-ports .ports .left .port {
-        position: relative;
-        left: -8px; }
     .decorator-with-ports .ports .center {
       /*background-color: $center-ports-background-color;*/
       width: 15px;
@@ -42,11 +38,45 @@
       vertical-align: top;
       width: 50px;
       min-height: 1px; }
+    .decorator-with-ports .ports .port {
+      white-space: nowrap;
+      position: relative;
+      height: 20px;
+      line-height: 20px; }
+      .decorator-with-ports .ports .port:hover {
+        cursor: pointer; }
+      .decorator-with-ports .ports .port .title-wrapper {
+        display: inline-block;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis; }
+      .decorator-with-ports .ports .port span.dot {
+        position: absolute;
+        display: inline-block;
+        background: #666666;
+        border: 1px solid #666666;
+        width: 3px;
+        height: 8px;
+        top: 5px; }
+      .decorator-with-ports .ports .port div.connector {
+        top: 4px; }
+    .decorator-with-ports .ports .left .port span.dot {
+      left: -8px;
+      /* -2 because of the 2px border-width of the decorator)*/
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px; }
+    .decorator-with-ports .ports .left .port .connector {
+      left: -7px; }
+    .decorator-with-ports .ports .right .port span.dot {
+      left: 53px;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px; }
+    .decorator-with-ports .ports .right .port .connector {
+      left: 57px; }
   .decorator-with-ports .connector {
-    box-sizing: border-box;
     background-color: #fefefe;
-    height: 12px;
-    width: 12px;
+    height: 10px;
+    width: 10px;
     position: absolute;
     cursor: pointer;
     border: 1px solid blue;
@@ -70,70 +100,3 @@
 .selected .decorator-with-ports {
   border: 2px solid #52a8ec;
   background-color: #dbeafc; }
-
-.port {
-  white-space: nowrap; }
-  .port:hover {
-    cursor: pointer; }
-  .port .title-wrapper {
-    display: inline-block;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis; }
-  .port span.dot {
-    display: inline-block;
-    width: 3px;
-    height: 7px;
-    background: #666666;
-    border: 1px solid #666666;
-    margin-bottom: 1px;
-    top: 2px;
-    position: relative; }
-
-.left .port span.dot {
-  margin-right: 2px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
-.left .port .connector {
-  box-sizing: border-box;
-  background-color: #fefefe;
-  height: 12px;
-  width: 12px;
-  position: absolute;
-  cursor: pointer;
-  border: 1px solid blue;
-  position: absolute;
-  left: 2px;
-  top: 3px;
-  display: inline-block; }
-  .left .port .connector:hover {
-    border-color: rgba(82, 168, 236, 0.8);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-  .left .port .connector.connection-end-state-hover {
-    background-color: lime; }
-
-.right .port span.dot {
-  margin-left: 3px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px; }
-.right .port .connector {
-  box-sizing: border-box;
-  background-color: #fefefe;
-  height: 12px;
-  width: 12px;
-  position: absolute;
-  cursor: pointer;
-  border: 1px solid blue;
-  position: relative;
-  left: -2px;
-  top: 2px;
-  display: inline-block; }
-  .right .port .connector:hover {
-    border-color: rgba(82, 168, 236, 0.8);
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-  .right .port .connector.connection-end-state-hover {
-    background-color: lime; }
