--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
@@ -1,2 +1,102 @@
-@import "DecoratorMain";
+@import "../../../DiagramDesigner/Connector";
 @import "Port";
+
+$min-width: 65px;
+$height: 40px;
+$border: 2px solid #000000;
+$padding: 3px;
+$background-color: #C5F1FF;
+$selected-background-color: #DBEAFC;
+$selected-border: 2px solid #52A8EC;
+$ports-background-color: #000000;
+$left-ports-background-color: rgba(255, 255, 0, 0.5);
+$right-ports-background-color: rgba(0, 0, 255, 0.5);
+$center-ports-background-color: rgba(0, 255, 0, 0.5);
+$ports-width : 50px;
+$ports-separator-width: 15px;
+
+.decorator-with-ports {
+  min-width: $min-width;
+  min-height: $height;
+  border: $border;
+  background-color: $background-color;
+  padding: $padding;
+  text-align: center;
+
+  .name {
+    white-space: nowrap;
+    font-size: 9px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: $ports-width * 2 + $ports-separator-width + $padding * 2;
+    border-bottom: 1px solid #000000;
+  }
+
+  .ports {
+    /*background-color: $ports-background-color;*/
+    font-size: 10px;
+    min-height: 1px;
+    width: $ports-width * 2 + $ports-separator-width + $padding * 2;
+
+    .left {
+      /*background-color: $left-ports-background-color;*/
+
+      display: inline-block;
+      vertical-align: top;
+
+      width: $ports-width;
+      min-height: 1px;
+    }
+
+    .center {
+      /*background-color: $center-ports-background-color;*/
+      width: $ports-separator-width;
+      height: 1px;
+
+      display: inline-block;
+      vertical-align: top;
+    }
+
+    .right {
+      /*background-color: $right-ports-background-color;*/
+      display: inline-block;
+      vertical-align: top;
+
+      width: $ports-width;
+      min-height: 1px;
+    }
+
+    @include port($ports-width, $padding, $connector-size);
+  }
+
+  .connector {
+    @include connector_basics;
+
+    margin-left: $connector-size / -2;
+    left: 50%;
+
+    &.top {
+      top: $connector-size / -2;
+    }
+
+    &.bottom {
+      bottom: $connector-size / -2;
+    }
+  }
+}
+
+.selectable {
+  .decorator-with-ports {
+    cursor: pointer;
+  }
+}
+
+.selected {
+  .decorator-with-ports {
+    border: $selected-border;
+    background-color: $selected-background-color;
+  }
+}
