diasble box-shadow on modal dialogs
box-shadow slows down scrolling (especially on the almost fullscreen
Repository history) while has no visual feature at all

--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -9,6 +9,14 @@
     user-select: all;
 }
 
+/************ MODAL DIALOG **************************/
+/* DISABLE DROP-SHADOW because it slows down scrolling :( */
+.modal {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
 /**************** NAVBAR *********************/
 
 .navbar-fixed-top .navbar-inner,
