implementing PropertyEditorWidget in side panel
necessery updates of:
WidgetBase, WidgetBaswWithHeader, DesignerCanvas,
DesignerCanvas.SelectionManager, iCheckBox, PropertyGrid control, etc...

--- a/nodeserver/src/client/css/Controls/iCheckBox.css
+++ b/nodeserver/src/client/css/Controls/iCheckBox.css
@@ -4,6 +4,7 @@ div.iCheckBox {
   display: inline-block;
   border-radius: 3px;
   position: relative;
+  cursor: pointer;
   background: -moz-linear-gradient(top, #cbcbcb, white);
   background: -webkit-linear-gradient(top, #cbcbcb, white);
   background: -o-linear-gradient(top, #cbcbcb, white);
