--- a/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
+++ b/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
@@ -35,3 +35,29 @@
     display: inline-block; }
   .widget-base-wh.read-only .widget-body {
     background-color: #fbfbfb; }
+
+.sidePane .widget-base-wh {
+  position: relative;
+  padding: 0px;
+  margin-bottom: 2px;
+  border: 1px solid #e9e9e9;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+  .sidePane .widget-base-wh .widget-header {
+    padding: 3px;
+    height: 18px;
+    background-color: whitesmoke; }
+    .sidePane .widget-base-wh .widget-header .widget-header-title {
+      font-size: 11px;
+      line-height: 18px;
+      color: #999;
+      text-transform: uppercase;
+      margin-right: 0;
+      margin-left: 0; }
+    .sidePane .widget-base-wh .widget-header .widget-header-toolbar {
+      display: block; }
+  .sidePane .widget-base-wh .widget-body {
+    background-color: whitesmoke; }
+  .sidePane .widget-base-wh.read-only .widget-body {
+    background-color: #fbfbfb; }
