--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -12,7 +12,7 @@ html,body {
     width: 100%;
     height: 100%;
     background-color:white;
-    font-family: Helvetica, Arial;
+    /*font-family: Helvetica, Arial;*/
     font-size: 12px;
 
     -khtml-user-select:none;
@@ -112,7 +112,7 @@ body {
 
 #middlePane {
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
 }
 
