--- a/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
+++ b/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
@@ -1,7 +1,13 @@
 $widget-header-background-color: #EFEFEF;
-
 $widget-body-background-color: #FFFFFF;
 $widget-body-background-color-read-only: #FBFBFB;
+
+$sidepane-widget-header-background-color: #F5F5F5;
+$sidepane-widget-body-background-color: #F5F5F5;
+$sidepane-widget-body-background-color-read-only: #FBFBFB;
+
+$sidepane-widget-border-color: #E9E9E9;
+$sidepane-widget-border-radius: 4px;
 
 .widget-base-wh {
   box-sizing: border-box;
@@ -66,6 +72,51 @@ $widget-body-background-color-read-only: #FBFBFB;
 
     .widget-body {
       background-color: $widget-body-background-color-read-only;
+    }
+  }
+}
+
+
+
+
+.sidePane {
+
+  .widget-base-wh {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 2px;
+    border: 1px solid $sidepane-widget-border-color;
+    -webkit-border-radius: $sidepane-widget-border-radius;
+    -moz-border-radius: $sidepane-widget-border-radius;
+    border-radius: $sidepane-widget-border-radius;
+
+    .widget-header {
+      padding: 3px;
+      height: 18px;
+      background-color: $sidepane-widget-header-background-color;
+
+      .widget-header-title {
+        font-size: 11px;
+        line-height: 18px;
+        color: #999;
+        text-transform: uppercase;
+        margin-right: 0;
+        margin-left: 0;
+      }
+
+      .widget-header-toolbar {
+        display: block;
+     }
+    }
+
+    .widget-body {
+      background-color: $sidepane-widget-body-background-color;
+    }
+
+    &.read-only {
+      .widget-body {
+        background-color: $sidepane-widget-body-background-color-read-only;
+      }
     }
   }
 }
