--- a/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
+++ b/nodeserver/src/client/scss/WidgetBase/WidgetBaseWithHeader.scss
@@ -22,6 +22,7 @@ $sidepane-widget-border-radius: 4px;
 
     .ro-icon {
       display: none;
+      margin-right: 2px;
     }
 
     .widget-header-title {
