implement ReadOnly feature in PropertyGrid

--- a/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
+++ b/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
@@ -75,11 +75,12 @@
             padding: 3px;
             width: 100%;
             float: right;
-            background: #303030;
             outline: none; }
-            .pgp ul li.cr .c input[type=text]:hover {
+          .pgp ul li.cr .c input[type=text]:not([disabled]) {
+            background: #303030; }
+            .pgp ul li.cr .c input[type=text]:not([disabled]):hover {
               background: #3c3c3c; }
-            .pgp ul li.cr .c input[type=text]:focus {
+            .pgp ul li.cr .c input[type=text]:not([disabled]):focus {
               background: #494949;
               color: #fff; }
           .pgp ul li.cr .c select {
