--- a/nodeserver/src/client/scss/PropertyGrid/PropertyGridPart.scss
+++ b/nodeserver/src/client/scss/PropertyGrid/PropertyGridPart.scss
@@ -130,9 +130,11 @@ $input-color: lighten($background-color, 8.5%);
             padding: 3px;
             width: 100%;
             float: right;
-
-            background: $input-color;
             outline: none;
+          }
+
+          input[type=text]:not([disabled]) {
+            background: $input-color;
 
             &:hover {
               background: lighten($input-color, $hover-lighten);
