--- a/nodeserver/src/client/scss/PropertyGrid/PropertyGridPart.scss
+++ b/nodeserver/src/client/scss/PropertyGrid/PropertyGridPart.scss
@@ -51,6 +51,8 @@ $input-color: lighten($background-color, 8.5%);
         line-height: $row-height;
         overflow: hidden;
         padding: 0 3px 0 3px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
 
       &.folder {
