--- a/nodeserver/src/client/css/AspectBuilder/AspectBuilderCanvas.css
+++ b/nodeserver/src/client/css/AspectBuilder/AspectBuilderCanvas.css
@@ -24,9 +24,12 @@ div.filterPanel {
     margin: 0; }
     div.filterPanel .body li.filterItem {
       margin: 3px 0; }
-    div.filterPanel .body .icon {
-      display: inline-block;
-      padding: 2px; }
+      div.filterPanel .body li.filterItem .iCheckBox {
+        float: right;
+        margin-top: 6px;
+        margin-left: 3px; }
+      div.filterPanel .body li.filterItem div > svg {
+        margin-top: 4px; }
   div.filterPanel:hover .header {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
   div.filterPanel:hover .body {
