--- a/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
+++ b/nodeserver/src/client/css/WidgetBase/WidgetBaseWithHeader.css
@@ -44,7 +44,8 @@
   border: 1px solid #e9e9e9;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  border-radius: 4px; }
+  border-radius: 4px;
+  background-color: whitesmoke; }
   .sidePane .widget-base-wh .widget-header {
     padding: 3px;
     height: 18px;
