--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/AttributesDecorator/_Attribute.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/AttributesDecorator/_Attribute.scss
@@ -10,6 +10,15 @@ $port-height: 20px;
     &:hover {
       cursor: pointer;
     }
+
+    .n {
+      float: left;
+      margin-right: 3px;
+    }
+
+    .t {
+      float: right;
+    }
   }
 }
 
