--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/AttributesDecorator/AttributesDecorator.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/AttributesDecorator/AttributesDecorator.scss
@@ -1,7 +1,7 @@
 @import "../../../DiagramDesigner/Connector";
 @import "Attribute";
 
-$min-width: 80px;
+$min-width: 100px;
 $height: 40px;
 $border: 2px solid #000000;
 $padding: 3px;
@@ -9,6 +9,8 @@ $background-color: #F5F5F5;
 $selected-background-color: #DBEAFC;
 $selected-border: 2px solid #52A8EC;
 $attributes-background-color: rgba(255, 255, 0, 0.5);
+$attributes-add-new-hover-background-color: #DBEAFC;
+$selected-attributes-add-new-hover-background-color: #FFFFC0;
 
 .attributes-decorator {
   min-width: $min-width;
@@ -30,19 +32,34 @@ $attributes-background-color: rgba(255, 255, 0, 0.5);
   }
 
   .attributes {
-    background-color: $attributes-background-color;
+    /*background-color: $attributes-background-color;*/
     font-size: 10px;
     min-height: 1px;
+    margin-bottom: 0;
 
     @include attribute();
   }
 
   .add-new {
+    font-size: 10px;
+    cursor: pointer;
 
+    [class^="icon-"],
+    [class*=" icon-"] {
+      margin-top: -1px;
+    }
+
+    &:hover {
+      background-color: $attributes-add-new-hover-background-color;
+    }
   }
 
   input[type=text].new-attr {
     font-size: 10px;
+  }
+
+  .control-group {
+    margin-bottom: 0;
   }
 
   .connector {
@@ -62,14 +79,20 @@ $attributes-background-color: rgba(255, 255, 0, 0.5);
 }
 
 .selectable {
-  .decorator-with-ports {
+  .attributes-decorator {
     cursor: pointer;
   }
 }
 
 .selected {
-  .decorator-with-ports {
+  .attributes-decorator {
     border: $selected-border;
     background-color: $selected-background-color;
+
+    .add-new {
+      &:hover {
+        background-color: $selected-attributes-add-new-hover-background-color;
+      }
+    }
   }
 }
