introducing OptionWidget type in property editor

--- a/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
+++ b/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
@@ -91,7 +91,8 @@
             height: 23px;
             border: 0;
             color: #FFFFFF;
-            background: #303030; }
+            background: #303030;
+            padding: 3px; }
     .pgp ul.closed li:not(.title),
     .pgp ul.closed ul li,
     .pgp ul.closed ul li > * {
