--- a/nodeserver/src/client/scss/PropertyEditorWidget/PropertyEditorWidget.scss
+++ b/nodeserver/src/client/scss/PropertyEditorWidget/PropertyEditorWidget.scss
@@ -61,6 +61,12 @@ $input-color: lighten($background-color, 18.5%);
             div.iCheckBox {
               margin-top: 5px;
             }
+
+            select {
+              background: $input-color;
+              color: $text-color;
+              font-size: 11px;
+            }
           }
         }
       }
