fix disabled Select tag's background color

--- a/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
+++ b/nodeserver/src/client/css/PropertyGrid/PropertyGridPart.css
@@ -91,8 +91,9 @@
             height: 23px;
             border: 0;
             color: #FFFFFF;
-            background: #303030;
             padding: 3px; }
+          .pgp ul li.cr .c select:not([disabled]) {
+            background: #303030; }
     .pgp ul.closed li:not(.title),
     .pgp ul.closed ul li,
     .pgp ul.closed ul li > * {
