creating widget from PartBrowser

--- a/nodeserver/src/client/css/Widgets/PartBrowser/PartBrowserWidget.css
+++ b/nodeserver/src/client/css/Widgets/PartBrowser/PartBrowserWidget.css
@@ -1,19 +1,19 @@
-.partBrowser {
+.part-browser {
   text-align: center;
   overflow-x: hidden;
   overflow-y: hidden; }
-  .partBrowser > ul {
+  .part-browser > ul {
     list-style-type: none;
     margin: 0;
     white-space: nowrap;
     padding: 0; }
-    .partBrowser > ul > li {
+    .part-browser > ul > li {
       list-style-type: none;
       padding: 0px;
       margin: 15px 10px 5px 10px;
       text-decoration: none;
       color: black;
       font-size: 10px; }
-      .partBrowser > ul > li div.part {
+      .part-browser > ul > li div.part {
         display: inline-block;
         cursor: pointer; }
