--- a/nodeserver/src/client/css/jquery/jquery.gritter.css
+++ b/nodeserver/src/client/css/jquery/jquery.gritter.css
@@ -25,17 +25,17 @@
 .gritter-item-wrapper {
 	position:relative;
 	margin:0 0 10px 0;
-	background:url('../images/ie-spacer.gif'); /* ie7/8 fix */ 
+	background:url('../../img/ie-spacer.gif'); /* ie7/8 fix */
 }
 .gritter-top {
-	background:url(../images/gritter.png) no-repeat left -30px;
+	background:url(../../img/gritter.png) no-repeat left -30px;
 	height:10px;
 }
 .hover .gritter-top {
 	background-position:right -30px;
 }
 .gritter-bottom {
-	background:url(../images/gritter.png) no-repeat left bottom;
+	background:url(../../img/gritter.png) no-repeat left bottom;
 	height:8px;
 	margin:0;
 }
@@ -44,7 +44,7 @@
 }
 .gritter-item {
 	display:block;
-	background:url(../images/gritter.png) no-repeat left -40px;
+	background:url(../../img/gritter.png) no-repeat left -40px;
 	color:#eee;
 	padding:2px 11px 8px 11px;
 	font-size: 11px;
@@ -63,7 +63,7 @@
 	position:absolute;
 	top:5px;
 	left:3px;
-	background:url(../images/gritter.png) no-repeat left top;
+	background:url(../../img/gritter.png) no-repeat left top;
 	cursor:pointer;
 	width:30px;
 	height:30px;
@@ -93,7 +93,7 @@
 .gritter-light .gritter-bottom,
 .gritter-light .gritter-top,
 .gritter-light .gritter-close {
-    background-image: url(../images/gritter-light.png);
+    background-image: url(../../img/gritter-light.png);
     color: #222;
 }
 .gritter-light .gritter-title {
