--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -1,7 +1,10 @@
 @import url("bootstrap.css");
 @import url("bootstrap_webgme_ext.css");
-@import url("jqueryui/jquery-ui-1.10.3.custom.css");
-@import url("../design/css/jquery.dataTables.bootstrapped.css");
+@import url("jquery/jquery-ui-1.10.3.custom.css");
+@import url("jquery/jquery.layout.css");
+@import url("jquery/jquery.layout.webgme.css");
+@import url("jquery/jquery.dataTables.bootstrapped.css");
+@import url("jquery/jquery.gritter.css");
 
 /* OWN STYLES */
 html,body {
