experimenting with zoom

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -58,10 +58,13 @@
   left: 0; }
   .diagram-designer .dropRegion.accept-droppable {
     background-color: rgba(0, 255, 0, 0.05); }
-
-.diagram-designer-property-dialog.ui-dialog .ui-dialog-content {
-  position: relative;
-  border: 0;
-  padding: 1px 1px;
-  overflow: auto;
-  zoom: 1; }
+.diagram-designer div.zoom {
+  height: 200px;
+  width: 5px;
+  position: absolute;
+  top: 10px;
+  left: 10px; }
+  .diagram-designer div.zoom a.ui-slider-handle {
+    width: 11px;
+    height: 11px;
+    left: -4px; }
